--- a/Raspberry-Pi/code/WebRpi/templates/index.html
+++ b/Raspberry-Pi/code/WebRpi/templates/index.html
@@ -11,7 +11,7 @@
         <script src = "https://apps.bdimg.com/libs/jquery/2.1.4/jquery.js" charset = "utf-8"></script>
 
         <!-- [> [> [> [> [> [> UPS信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">UPS监控:&nbsp&nbsp&nbsp<button id = "ViewUps"></button>&nbsp&nbsp&nbsp<button id = "ups_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">UPS监控:&nbsp&nbsp&nbsp<button id = "ViewUps"></button>&nbsp&nbsp&nbsp<button id = "RefreshUPS">Refresh</button></p>
         <div id = "UpsInfo" style = "display: none;">
             <span id = "UPS_Time"></span>
             <span id = "UPS_Status"></span>
@@ -54,7 +54,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#ups_refresh").click(function(){
+                $("#RefreshUPS").click(function(){
                     $.ajax({
                         url: "update/ups",
                         type: "GET",
@@ -73,7 +73,7 @@
         </script>
 
         <!-- [> [> [> [> [> [> CPU信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">CPU监控:&nbsp&nbsp&nbsp<button id = "ViewCpu"></button>&nbsp&nbsp&nbsp<button id = "cpu_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">CPU监控:&nbsp&nbsp&nbsp<button id = "ViewCpu"></button>&nbsp&nbsp&nbsp<button id = "RefreshCPU">Refresh</button></p>
         <div id = "CpuInfo" style = "display: none;">
             CPU利用率: <span id = "CPU_Percent"></span>% |
             CPU负载: <span id = "CPU_Load_1"></span>, <span id = "CPU_Load_5"></span>, <span id = "CPU_Load_10"></span> |
@@ -115,7 +115,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#cpu_refresh").click(function(){
+                $("#RefreshCPU").click(function(){
                     $.ajax({
                         url: "update/cpu",
                         type: "GET",
@@ -135,7 +135,7 @@
         </script>
 
         <!-- [> [> [> [> [> [> 内存信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">内存监控:&nbsp&nbsp&nbsp<button id = "ViewMem"></button>&nbsp&nbsp&nbsp<button id = "mem_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">内存监控:&nbsp&nbsp&nbsp<button id = "ViewMem"></button>&nbsp&nbsp&nbsp<button id = "RefreshMEM">Refresh</button></p>
         <div id = "MemInfo" style = "display: none;">
             总物理内存: <span id = "MEM_Total"></span>MiB |
             已用百分比: <span id = "MEM_Percent"></span>% |
@@ -176,7 +176,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#mem_refresh").click(function(){
+                $("#RefreshMEM").click(function(){
                     $.ajax({
                         url: "update/mem",
                         type: "GET",
@@ -194,7 +194,7 @@
         </script>
 
         <!-- [> [> [> [> [> [> 交换分区信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">Swap监控:&nbsp&nbsp&nbsp<button id = "ViewSwap"></button>&nbsp&nbsp&nbsp<button id = "swap_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">Swap监控:&nbsp&nbsp&nbsp<button id = "ViewSwap"></button>&nbsp&nbsp&nbsp<button id = "RefreshSWAP">Refresh</button></p>
         <div id = "SwapInfo" style = "display: none;">
             总交换分区: <span id = "SWAP_Total"></span>MiB |
             已用百分比: <span id = "SWAP_Percent"></span>% |
@@ -235,7 +235,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#swap_refresh").click(function(){
+                $("#RefreshSWAP").click(function(){
                     $.ajax({
                         url: "update/swap",
                         type: "GET",
@@ -253,7 +253,7 @@
         </script>
 
         <!-- [> [> [> [> [> [> 磁盘信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">磁盘监控:&nbsp&nbsp&nbsp<button id = "ViewDisk"></button>&nbsp&nbsp&nbsp<button id = "disk_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">磁盘监控:&nbsp&nbsp&nbsp<button id = "ViewDisk"></button>&nbsp&nbsp&nbsp<button id = "RefreshDISK">Refresh</button></p>
         <div id = "DiskInfo" style = "display: none;">
             挂载点: <span id = "DISK_Path"></span> |
             磁盘大小: <span id = "DISK_Total"></span>GiB |
@@ -296,7 +296,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#disk_refresh").click(function(){
+                $("#RefreshDISK").click(function(){
                     $.ajax({
                         url: "update/disk",
                         type: "GET",
@@ -315,7 +315,7 @@
         </script>
 
         <!-- [> [> [> [> [> [> 网卡信息 <] <] <] <] <] <] -->
-        <p style = "width: 100%; display: block;">网卡监控:&nbsp&nbsp&nbsp<button id = "ViewNet"></button>&nbsp&nbsp&nbsp<button id = "net_refresh">Refresh</button></p>
+        <p style = "width: 100%; display: block;">网卡监控:&nbsp&nbsp&nbsp<button id = "ViewNet"></button>&nbsp&nbsp&nbsp<button id = "RefreshNET">Refresh</button></p>
         <div id = "NetInfo" style = "display: none;">
             <p id = "NET"></p>
         </div>
@@ -362,7 +362,7 @@
         <!-- 确保点击"Refresh"按钮即可刷新 -->
         <script charset = "utf-8">
             $(function() {
-                $("#net_refresh").click(function(){
+                $("#RefreshNET").click(function(){
                     $.ajax({
                         url: "update/net",
                         type: "GET",
